bin/testsuite/tests/compiler/src/errors/compiler5776.swg
#global testerror "Saf0030"

#[Swag.Sanity(true)]
func test()
{
    let a = @tableof(null, null)
}
